--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: [PyCrystallography.]
-logo_url: PyCrystallography/Images/logo.png
+title: PyCrystallography
+logo_url: https://github.com/Shellywell123/PyCrystallography/blob/gh-pages/PyCrystallography/Images/Logo.png
