--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ theme: jekyll-theme-cayman
 title: PyCrystallography
 logo_url: https://github.com/Shellywell123/PyCrystallography/blob/gh-pages/PyCrystallography/Images/favicon.ico
 logo: https://github.com/Shellywell123/PyCrystallography/blob/gh-pages/PyCrystallography/Images/Logo.png
+plugins:
+  - jekyll-seo-tag
 sidebar_categories:
   null:
     - index
