Set theme jekyll-theme-leap-day

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-leap-day
 title: PyCrystallography
 logo_url: https://github.com/Shellywell123/PyCrystallography/blob/gh-pages/PyCrystallography/Images/favicon.ico
 logo: https://github.com/Shellywell123/PyCrystallography/blob/gh-pages/PyCrystallography/Images/Logo.png
